// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshots badge label 1`] = `
<div
  class="inline-flex flex-row items-center mr-2 last:mr-0 relative border border-gray-200 rounded-full h-18 w-18"
>
  <img
    alt="Avatar for Drew"
    class="w-full h-full rounded-full"
    src="https://avatars1.githubusercontent.com/u/194885"
  />
  <div
    class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 right-0 text-xs bg-gray-600 border-gray-100 text-white rounded-full -top-3 right-1"
  >
    <div
      class="flex justify-center gap-1"
    >
      <span>
        Test Badge
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshots badgeColor 1`] = `
<div
  class="inline-flex flex-row items-center mr-2 last:mr-0 relative border border-gray-200 rounded-full h-18 w-18"
>
  <img
    alt="Avatar for Drew"
    class="w-full h-full rounded-full"
    src="https://avatars1.githubusercontent.com/u/194885"
  />
  <div
    class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 right-0 text-xs bg-purple-600 border-purple-100 text-white rounded-full -top-3 right-1"
  >
    <div
      class="flex justify-center gap-1"
    >
      <span>
        Purple
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshots badgeShape circle [default] 1`] = `
<div
  class="inline-flex flex-row items-center mr-2 last:mr-0 relative border border-gray-200 rounded-full h-18 w-18"
>
  <img
    alt="Avatar for Drew"
    class="w-full h-full rounded-full"
    src="https://avatars1.githubusercontent.com/u/194885"
  />
  <div
    class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 right-0 text-xs bg-gray-600 border-gray-100 text-white rounded-full -top-3 right-1"
  >
    <div
      class="flex justify-center gap-1"
    >
      <span>
        Test Badge
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshots badgeShape square 1`] = `
<div
  class="inline-flex flex-row items-center mr-2 last:mr-0 relative border border-gray-200 rounded-full h-18 w-18"
>
  <img
    alt="Avatar for Drew"
    class="w-full h-full rounded-full"
    src="https://avatars1.githubusercontent.com/u/194885"
  />
  <div
    class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 right-0 text-xs bg-gray-600 border-gray-100 text-white rounded-md -top-3 right-1"
  >
    <div
      class="flex justify-center gap-1"
    >
      <span>
        Test Badge
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshots shape circle [default] 1`] = `
<div
  class="inline-flex flex-row items-center mr-2 last:mr-0 relative border border-gray-200 rounded-full h-12 w-12"
>
  <img
    alt="Avatar for Drew"
    class="w-full h-full rounded-full"
    src="https://avatars1.githubusercontent.com/u/194885"
  />
</div>
`;

exports[`Avatar snapshots shape square 1`] = `
<div
  class="inline-flex flex-row items-center mr-2 last:mr-0 relative border border-gray-200 rounded-md h-12 w-12"
>
  <img
    alt="Avatar for Drew"
    class="w-full h-full rounded-md"
    src="https://avatars1.githubusercontent.com/u/194885"
  />
</div>
`;

exports[`Avatar snapshots size lg 1`] = `
<div
  class="inline-flex flex-row items-center mr-2 last:mr-0 relative border border-gray-200 rounded-full h-18 w-18"
>
  <img
    alt="Avatar for Drew"
    class="w-full h-full rounded-full"
    src="https://avatars1.githubusercontent.com/u/194885"
  />
</div>
`;

exports[`Avatar snapshots size md [default] 1`] = `
<div
  class="inline-flex flex-row items-center mr-2 last:mr-0 relative border border-gray-200 rounded-full h-12 w-12"
>
  <img
    alt="Avatar for Drew"
    class="w-full h-full rounded-full"
    src="https://avatars1.githubusercontent.com/u/194885"
  />
</div>
`;

exports[`Avatar snapshots size xs 1`] = `
<div
  class="inline-flex flex-row items-center mr-2 last:mr-0 relative border border-gray-200 rounded-full h-6 w-6"
>
  <img
    alt="Avatar for Drew"
    class="w-full h-full rounded-full"
    src="https://avatars1.githubusercontent.com/u/194885"
  />
</div>
`;
